Fix deprecated GitHub Actions versions
- Update actions/upload-artifact from v3 to v4
- Update softprops/action-gh-release from v1 to v2
- Resolves deprecation warnings

--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -24,7 +24,7 @@ jobs:
     
     strategy:
       matrix:
-        java-version: [11, 17]
+        java-version: [17]
         maven-version: ['3.9.9']
       fail-fast: false
     
